Add max_gateway_count and max_device_count to organization.
