# go/as/external/api/organization.pb.go
@@ -35,7 +35,13 @@ type Organization struct {
 	// Organization display name.
 	DisplayName string `protobuf:"bytes,3,opt,name=display_name,json=displayName,proto3" json:"display_name,omitempty"`
 	// Can the organization create and "own" Gateways?
-	CanHaveGateways      bool     `protobuf:"varint,4,opt,name=can_have_gateways,json=canHaveGateways,proto3" json:"can_have_gateways,omitempty"`
+	CanHaveGateways bool `protobuf:"varint,4,opt,name=can_have_gateways,json=canHaveGateways,proto3" json:"can_have_gateways,omitempty"`
+	// Max. gateway count for organization.
+	// When set to 0, the organization can have unlimited gateways.
+	MaxGatewayCount uint32 `protobuf:"varint,5,opt,name=max_gateway_count,json=maxGatewayCount,proto3" json:"max_gateway_count,omitempty"`
+	// Max. device count for organization.
+	// When set to 0, the organization can have unlimited devices.
+	MaxDeviceCount       uint32   `protobuf:"varint,6,opt,name=max_device_count,json=maxDeviceCount,proto3" json:"max_device_count,omitempty"`
 	XXX_NoUnkeyedLiteral struct{} `json:"-"`
 	XXX_unrecognized     []byte   `json:"-"`
 	XXX_sizecache        int32    `json:"-"`
@@ -92,6 +98,20 @@ func (m *Organization) GetCanHaveGateways() bool {
 		return m.CanHaveGateways
 	}
 	return false
+}
+
+func (m *Organization) GetMaxGatewayCount() uint32 {
+	if m != nil {
+		return m.MaxGatewayCount
+	}
+	return 0
+}
+
+func (m *Organization) GetMaxDeviceCount() uint32 {
+	if m != nil {
+		return m.MaxDeviceCount
+	}
+	return 0
 }
 
 type OrganizationListItem struct {
@@ -1099,74 +1119,76 @@ func init() {
 }
 
 var fileDescriptor_7185a1e614145d4b = []byte{
-	// 1065 bytes of a gzipped FileDescriptorProto
-	0x1f, 0x8b, 0x08, 0x00, 0x00, 0x00, 0x00, 0x00, 0x02, 0xff, 0xc4, 0x57, 0xdd, 0x6e, 0x1b, 0x45,
-	0x14, 0xd6, 0xda, 0xb1, 0x1d, 0x1f, 0x87, 0xfc, 0x0c, 0x21, 0xb6, 0x37, 0x31, 0x76, 0x57, 0x08,
-	0x8c, 0x29, 0x5e, 0xe1, 0x52, 0x50, 0x51, 0x6f, 0xdc, 0x06, 0x99, 0x48, 0x08, 0xa4, 0x85, 0x4a,
-	0x08, 0x09, 0x96, 0xc9, 0xee, 0xc4, 0x1e, 0x61, 0xef, 0x6e, 0x77, 0xc6, 0x29, 0xa1, 0xca, 0x05,
-	0x5c, 0xf4, 0x02, 0x2e, 0x79, 0x0d, 0x78, 0x0d, 0x5e, 0x80, 0x8b, 0xbe, 0x00, 0xcf, 0xc0, 0x2d,
-	0xd5, 0xcc, 0x8e, 0xa3, 0xf5, 0xfe, 0x34, 0x3f, 0x8d, 0x94, 0x3b, 0xcf, 0x99, 0x6f, 0xcf, 0xf9,
-	0xce, 0x37, 0xe7, 0x9c, 0x19, 0x83, 0x81, 0x99, 0x49, 0x7e, 0xe2, 0x24, 0xf4, 0xf0, 0xd4, 0xc4,
-	0x01, 0x35, 0xfd, 0x70, 0x8c, 0x3d, 0xfa, 0x33, 0xe6, 0xd4, 0xf7, 0xfa, 0x41, 0xe8, 0x73, 0x1f,
-	0x15, 0x71, 0x40, 0xf5, 0xbd, 0xb1, 0xef, 0x8f, 0xa7, 0x44, 0x62, 0xb0, 0xe7, 0xf9, 0x5c, 0x22,
-	0x58, 0x04, 0xd1, 0xdb, 0x6a, 0x57, 0xae, 0x0e, 0xe7, 0x47, 0x26, 0xa7, 0x33, 0xc2, 0x38, 0x9e,
-	0x05, 0x0a, 0xb0, 0x9b, 0x04, 0x90, 0x59, 0xc0, 0x4f, 0xa2, 0x4d, 0xe3, 0x17, 0x0d, 0xd6, 0xbe,
-	0x8c, 0xc5, 0x45, 0xeb, 0x50, 0xa0, 0x6e, 0x43, 0xeb, 0x68, 0xdd, 0xa2, 0x55, 0xa0, 0x2e, 0x42,
-	0xb0, 0xe2, 0xe1, 0x19, 0x69, 0x14, 0x3a, 0x5a, 0xb7, 0x6a, 0xc9, 0xdf, 0xe8, 0x16, 0xac, 0xb9,
-	0x94, 0x05, 0x53, 0x7c, 0x62, 0xcb, 0xbd, 0xa2, 0xdc, 0xab, 0x29, 0xdb, 0x17, 0x02, 0xd2, 0x83,
-	0x2d, 0x07, 0x7b, 0xf6, 0x04, 0x1f, 0x13, 0x7b, 0x8c, 0x39, 0x79, 0x82, 0x4f, 0x58, 0x63, 0xa5,
-	0xa3, 0x75, 0x57, 0xad, 0x0d, 0x07, 0x7b, 0x9f, 0xe1, 0x63, 0x32, 0x52, 0x66, 0xe3, 0x7f, 0x0d,
-	0xb6, 0xe3, 0x1c, 0x3e, 0xa7, 0x8c, 0x1f, 0x70, 0x32, 0xbb, 0x01, 0x2e, 0xe8, 0x1e, 0x80, 0x13,
-	0x12, 0xcc, 0x89, 0x6b, 0x63, 0xde, 0x28, 0x75, 0xb4, 0x6e, 0x6d, 0xa0, 0xf7, 0x23, 0x05, 0xfb,
-	0x0b, 0x05, 0xfb, 0x5f, 0x2f, 0x24, 0xb6, 0xaa, 0x0a, 0x3d, 0xe4, 0xe2, 0xd3, 0x79, 0xe0, 0x2e,
-	0x3e, 0x2d, 0x9f, 0xff, 0xa9, 0x42, 0x0f, 0xb9, 0xd1, 0x85, 0x9d, 0x11, 0xe1, 0x71, 0x0d, 0x2c,
-	0xf2, 0x78, 0x4e, 0x18, 0x4f, 0x4a, 0x60, 0xfc, 0xad, 0x41, 0x3d, 0x05, 0x65, 0x81, 0xef, 0x31,
-	0x82, 0xee, 0xc2, 0x5a, 0xbc, 0x84, 0xe4, 0x57, 0xb5, 0xc1, 0x56, 0x1f, 0x07, 0xb4, 0xbf, 0xf4,
-	0xc1, 0x12, 0x2c, 0x91, 0x72, 0xe1, 0xea, 0x29, 0x17, 0x2f, 0x93, 0xb2, 0x05, 0xcd, 0x87, 0xd2,
-	0x4f, 0x56, 0xd6, 0x57, 0xcb, 0xc4, 0xb8, 0x0d, 0x7a, 0x96, 0x4f, 0x25, 0x4f, 0x52, 0x4a, 0x0b,
-	0x9a, 0x8f, 0x24, 0x9d, 0x6b, 0x64, 0xf0, 0x1e, 0x34, 0xf7, 0xc9, 0x94, 0x64, 0xfb, 0x4c, 0x12,
-	0xb0, 0xa1, 0x2e, 0x4a, 0x3d, 0x0b, 0xba, 0x0d, 0xa5, 0x29, 0x9d, 0x51, 0xae, 0xd0, 0xd1, 0x02,
-	0xed, 0x40, 0xd9, 0x3f, 0x3a, 0x62, 0x24, 0x3a, 0xa5, 0xa2, 0xa5, 0x56, 0xc2, 0xce, 0x08, 0x0e,
-	0x9d, 0x89, 0xaa, 0x7e, 0xb5, 0x32, 0x3c, 0x68, 0xa4, 0x03, 0x28, 0x35, 0xda, 0x50, 0xe3, 0x3e,
-	0xc7, 0x53, 0xdb, 0xf1, 0xe7, 0xde, 0x22, 0x0e, 0x48, 0xd3, 0x43, 0x61, 0x41, 0x1f, 0x40, 0x39,
-	0x24, 0x6c, 0x3e, 0x15, 0xc1, 0x8a, 0xdd, 0xda, 0xa0, 0x99, 0xca, 0x7d, 0xd1, 0xa7, 0x96, 0x02,
-	0x1a, 0xcf, 0x35, 0xd8, 0x8c, 0x03, 0x1e, 0x31, 0x12, 0xa2, 0x77, 0x60, 0x23, 0x2e, 0x91, 0x7d,
-	0x26, 0xc1, 0x7a, 0xdc, 0x7c, 0xb0, 0x8f, 0xea, 0x50, 0x99, 0x33, 0x12, 0x0a, 0x80, 0x4a, 0x4f,
-	0x2c, 0x0f, 0xf6, 0x51, 0x13, 0x56, 0x29, 0xb3, 0xb1, 0x3b, 0xa3, 0x9e, 0x4c, 0x70, 0xd5, 0xaa,
-	0x50, 0x36, 0x14, 0x4b, 0xf4, 0x36, 0x6c, 0x50, 0x66, 0xbb, 0xe4, 0x98, 0x3a, 0x44, 0x21, 0x4a,
-	0x12, 0xf1, 0x1a, 0x65, 0xfb, 0xd2, 0x1a, 0xe1, 0xba, 0xb0, 0x49, 0xd9, 0xa2, 0xf9, 0x15, 0xb0,
-	0x2c, 0x81, 0xeb, 0x94, 0xa9, 0xe6, 0x8f, 0x90, 0xdb, 0x50, 0x22, 0x33, 0x4c, 0xa7, 0x72, 0x40,
-	0x54, 0xad, 0x68, 0x61, 0xfc, 0x59, 0x80, 0x46, 0x32, 0xb3, 0xb3, 0x31, 0x15, 0x23, 0xae, 0x2d,
-	0x11, 0x3f, 0xf3, 0x55, 0x88, 0xf9, 0xba, 0x64, 0x3a, 0xe5, 0x8b, 0xa6, 0x53, 0xc9, 0x4c, 0x67,
-	0xb9, 0xb9, 0x57, 0xae, 0xde, 0xdc, 0xa5, 0xcb, 0x34, 0xf7, 0x0f, 0xa0, 0x0f, 0x5d, 0x37, 0x29,
-	0xd8, 0xa2, 0xb8, 0x1f, 0xc0, 0xd6, 0x52, 0x45, 0x08, 0xb5, 0x54, 0x83, 0xbd, 0x91, 0x2a, 0x32,
-	0xf9, 0xe1, 0xa6, 0x9f, 0xb0, 0x18, 0x0e, 0xb4, 0xd2, 0xcd, 0x7b, 0xdd, 0x41, 0x30, 0xb4, 0xd2,
-	0xdd, 0x1c, 0x0f, 0xf2, 0xca, 0xb5, 0x6d, 0xcc, 0x61, 0x2f, 0xd9, 0xa2, 0x22, 0x00, 0xbb, 0x74,
-	0x84, 0xb3, 0x89, 0x21, 0xfc, 0x97, 0xd2, 0x13, 0xa3, 0x28, 0xcd, 0x6a, 0x65, 0x3c, 0x81, 0x56,
-	0x4e, 0xd8, 0x8b, 0x8e, 0x87, 0xbb, 0x89, 0xf1, 0xd0, 0xca, 0x14, 0x35, 0x35, 0x22, 0xbe, 0x07,
-	0x3d, 0x71, 0x7d, 0x5d, 0xaf, 0x9e, 0xcf, 0x35, 0xd8, 0xcd, 0x0c, 0xa0, 0xf2, 0xba, 0x86, 0xb2,
-	0xb8, 0x99, 0x0b, 0x73, 0xf0, 0x5f, 0x15, 0x5e, 0x8f, 0x93, 0xfb, 0x8a, 0x84, 0x62, 0x20, 0x20,
-	0x1b, 0x56, 0x84, 0xca, 0x68, 0x4f, 0xd2, 0xcf, 0xb9, 0x50, 0xf4, 0x56, 0xce, 0x6e, 0x24, 0x8b,
-	0xa1, 0xff, 0xfa, 0xcf, 0xbf, 0x7f, 0x14, 0xb6, 0x11, 0x4a, 0x3d, 0x44, 0x19, 0xc2, 0x50, 0x1c,
-	0x11, 0x8e, 0x76, 0xa5, 0x87, 0xec, 0x67, 0x8a, 0xbe, 0x97, 0xbd, 0xa9, 0xbc, 0xb7, 0xa5, 0xf7,
-	0x26, 0xaa, 0xa7, 0xbd, 0x9b, 0x4f, 0xa9, 0x7b, 0x8a, 0x26, 0x50, 0x8e, 0x2e, 0x6e, 0xf4, 0xa6,
-	0x74, 0x94, 0xfb, 0x32, 0xd0, 0xdb, 0xb9, 0xfb, 0x2a, 0x56, 0x4b, 0xc6, 0xaa, 0x1b, 0x19, 0x99,
-	0x7c, 0xa2, 0xf5, 0xd0, 0x63, 0x28, 0x47, 0x73, 0x43, 0x45, 0xca, 0x7d, 0x01, 0xe8, 0x3b, 0xa9,
-	0x63, 0xf9, 0x54, 0xbc, 0x9b, 0x0d, 0x53, 0x06, 0x78, 0x57, 0x7f, 0x2b, 0x2b, 0x99, 0xa5, 0x27,
-	0x3c, 0x75, 0x4f, 0x45, 0x48, 0x0c, 0xe5, 0x68, 0x8a, 0xa8, 0x90, 0xb9, 0x0f, 0x84, 0xdc, 0x90,
-	0x4a, 0xbf, 0x5e, 0xae, 0x7e, 0xcf, 0x34, 0xa8, 0x8a, 0xb3, 0x95, 0x3d, 0x8c, 0x6e, 0x65, 0x9e,
-	0x75, 0x7c, 0xac, 0xe8, 0xc6, 0xcb, 0x20, 0x4a, 0xc9, 0x81, 0x8c, 0x7a, 0x1b, 0xf5, 0xce, 0x4b,
-	0xd4, 0xa6, 0xee, 0xa9, 0x39, 0x97, 0xa1, 0x7f, 0xd3, 0xa0, 0x32, 0x22, 0x92, 0x07, 0x6a, 0x67,
-	0xd5, 0x44, 0xac, 0xdb, 0xf5, 0x4e, 0x3e, 0x40, 0x51, 0xb8, 0x2f, 0x29, 0x7c, 0x84, 0x3e, 0xbc,
-	0x38, 0x05, 0xf3, 0xa9, 0x1a, 0x0c, 0xa7, 0xe8, 0x77, 0x0d, 0x2a, 0x43, 0xd7, 0x8d, 0x91, 0xc9,
-	0xbf, 0x94, 0x72, 0xb5, 0x1f, 0x49, 0x0a, 0x43, 0xe3, 0xfe, 0xb9, 0x14, 0x44, 0xdc, 0x7e, 0x36,
-	0x29, 0x51, 0x06, 0x7f, 0x69, 0x00, 0x51, 0xb5, 0x49, 0x42, 0x46, 0x4e, 0xf9, 0x5d, 0x84, 0x93,
-	0x23, 0x39, 0x7d, 0xa7, 0x7f, 0xf3, 0x2a, 0x9c, 0xb2, 0x90, 0x0b, 0xe9, 0x04, 0xdf, 0x67, 0x1a,
-	0x40, 0x54, 0xaa, 0x31, 0xbe, 0x2f, 0xbd, 0x0e, 0x73, 0xf9, 0xaa, 0x63, 0xec, 0x5d, 0xe9, 0x18,
-	0x1f, 0xdc, 0xfb, 0xf6, 0xe3, 0x31, 0xe5, 0x93, 0xf9, 0x61, 0xdf, 0xf1, 0x67, 0xe6, 0x61, 0xe8,
-	0x3b, 0x18, 0x87, 0xa6, 0x33, 0xa1, 0x61, 0xc0, 0x38, 0x76, 0x7e, 0x7c, 0x5f, 0x38, 0x1d, 0xfb,
-	0xe6, 0xf1, 0x1d, 0x33, 0xf1, 0x8f, 0xfa, 0xb0, 0x2c, 0x89, 0xdc, 0x79, 0x11, 0x00, 0x00, 0xff,
-	0xff, 0x53, 0x7f, 0x03, 0xc9, 0x6b, 0x0f, 0x00, 0x00,
+	// 1097 bytes of a gzipped FileDescriptorProto
+	0x1f, 0x8b, 0x08, 0x00, 0x00, 0x00, 0x00, 0x00, 0x02, 0xff, 0xc4, 0x57, 0xdb, 0x6e, 0x1b, 0x45,
+	0x18, 0xd6, 0xda, 0xf1, 0x26, 0xf9, 0x93, 0xe6, 0x30, 0x84, 0xc4, 0xde, 0xc4, 0x24, 0x5d, 0x21,
+	0x30, 0xa1, 0x78, 0x45, 0x4a, 0x41, 0x45, 0xbd, 0x71, 0x1b, 0x14, 0x22, 0x21, 0x90, 0x16, 0x2a,
+	0x21, 0x24, 0x58, 0x26, 0xbb, 0x13, 0x7b, 0x84, 0xf7, 0xd0, 0x9d, 0x71, 0x9a, 0x50, 0xe5, 0x86,
+	0x8b, 0x5e, 0xc0, 0x25, 0xaf, 0x01, 0xaf, 0xc1, 0x0b, 0x70, 0xd1, 0x17, 0xe0, 0x19, 0xb8, 0x05,
+	0xcd, 0xc1, 0xd6, 0x7a, 0x0f, 0xcd, 0xa1, 0x91, 0x7a, 0xe7, 0x99, 0xf9, 0xf6, 0xff, 0xbe, 0xff,
+	0x38, 0x63, 0xb0, 0x31, 0x73, 0xc8, 0x29, 0x27, 0x69, 0x84, 0x87, 0x0e, 0x4e, 0xa8, 0x13, 0xa7,
+	0x7d, 0x1c, 0xd1, 0x9f, 0x31, 0xa7, 0x71, 0xd4, 0x4d, 0xd2, 0x98, 0xc7, 0xa8, 0x8e, 0x13, 0x6a,
+	0x6d, 0xf5, 0xe3, 0xb8, 0x3f, 0x24, 0x12, 0x83, 0xa3, 0x28, 0xe6, 0x12, 0xc1, 0x14, 0xc4, 0xda,
+	0xd6, 0xa7, 0x72, 0x75, 0x34, 0x3a, 0x76, 0x38, 0x0d, 0x09, 0xe3, 0x38, 0x4c, 0x34, 0x60, 0x33,
+	0x0f, 0x20, 0x61, 0xc2, 0xcf, 0xd4, 0xa1, 0xfd, 0xc2, 0x80, 0xc5, 0xaf, 0x32, 0xbc, 0x68, 0x09,
+	0x6a, 0x34, 0x68, 0x1a, 0x3b, 0x46, 0xa7, 0xee, 0xd6, 0x68, 0x80, 0x10, 0xcc, 0x44, 0x38, 0x24,
+	0xcd, 0xda, 0x8e, 0xd1, 0x99, 0x77, 0xe5, 0x6f, 0x74, 0x1b, 0x16, 0x03, 0xca, 0x92, 0x21, 0x3e,
+	0xf3, 0xe4, 0x59, 0x5d, 0x9e, 0x2d, 0xe8, 0xbd, 0x2f, 0x05, 0x64, 0x17, 0x56, 0x7d, 0x1c, 0x79,
+	0x03, 0x7c, 0x42, 0xbc, 0x3e, 0xe6, 0xe4, 0x29, 0x3e, 0x63, 0xcd, 0x99, 0x1d, 0xa3, 0x33, 0xe7,
+	0x2e, 0xfb, 0x38, 0xfa, 0x1c, 0x9f, 0x90, 0x03, 0xbd, 0x2d, 0xb0, 0x21, 0x3e, 0x1d, 0xc3, 0x3c,
+	0x3f, 0x1e, 0x45, 0xbc, 0xd9, 0xd8, 0x31, 0x3a, 0xb7, 0xdc, 0xe5, 0x10, 0x9f, 0x6a, 0xdc, 0x23,
+	0xb1, 0x8d, 0x3a, 0xb0, 0x22, 0xb0, 0x01, 0x39, 0xa1, 0x3e, 0xd1, 0x50, 0x53, 0x42, 0x97, 0x42,
+	0x7c, 0xba, 0x2f, 0xb7, 0x25, 0xd2, 0xfe, 0xcf, 0x80, 0xb5, 0xac, 0x67, 0x5f, 0x50, 0xc6, 0x0f,
+	0x39, 0x09, 0x5f, 0x87, 0x87, 0xf7, 0x01, 0xfc, 0x94, 0x60, 0x4e, 0x02, 0x0f, 0x2b, 0xd7, 0x16,
+	0xf6, 0xac, 0xae, 0xca, 0x4b, 0x77, 0x9c, 0x97, 0xee, 0x37, 0xe3, 0xc4, 0xb9, 0xf3, 0x1a, 0xdd,
+	0xe3, 0xe2, 0xd3, 0x51, 0x12, 0x8c, 0x3f, 0x35, 0x2f, 0xfe, 0x54, 0xa3, 0x7b, 0xdc, 0xee, 0xc0,
+	0xfa, 0x01, 0xe1, 0xd9, 0x18, 0xb8, 0xe4, 0xc9, 0x88, 0x30, 0x9e, 0x0f, 0x81, 0xfd, 0x97, 0x01,
+	0x1b, 0x05, 0x28, 0x4b, 0xe2, 0x88, 0x11, 0x74, 0x0f, 0x16, 0xb3, 0x85, 0x29, 0xbf, 0x5a, 0xd8,
+	0x5b, 0xed, 0xe2, 0x84, 0x76, 0xa7, 0x3e, 0x98, 0x82, 0xe5, 0x5c, 0xae, 0x5d, 0xdf, 0xe5, 0xfa,
+	0x55, 0x5c, 0x76, 0xa1, 0xf5, 0x48, 0xda, 0x29, 0xf3, 0xfa, 0x7a, 0x9e, 0xd8, 0x77, 0xc0, 0x2a,
+	0xb3, 0xa9, 0xc3, 0x93, 0x0f, 0xa5, 0x0b, 0xad, 0xc7, 0x52, 0xce, 0x0d, 0x2a, 0x78, 0x1f, 0x5a,
+	0xfb, 0x64, 0x48, 0xca, 0x6d, 0xe6, 0x05, 0x78, 0xb0, 0x21, 0x4a, 0xbd, 0x0c, 0xba, 0x06, 0x8d,
+	0x21, 0x0d, 0x29, 0xd7, 0x68, 0xb5, 0x40, 0xeb, 0x60, 0xc6, 0xc7, 0xc7, 0x8c, 0xa8, 0x2c, 0xd5,
+	0x5d, 0xbd, 0x12, 0xfb, 0x8c, 0xe0, 0xd4, 0x1f, 0xe8, 0xea, 0xd7, 0x2b, 0x3b, 0x82, 0x66, 0x91,
+	0x40, 0x47, 0x63, 0x1b, 0x16, 0x78, 0xcc, 0xf1, 0x50, 0x77, 0xa6, 0xe2, 0x01, 0xb9, 0xa5, 0xfa,
+	0xf7, 0x43, 0x30, 0x53, 0xc2, 0x46, 0x43, 0x41, 0x56, 0xef, 0x2c, 0xec, 0xb5, 0x0a, 0xbe, 0x8f,
+	0xfb, 0xd4, 0xd5, 0x40, 0x31, 0xa2, 0x56, 0xb2, 0x80, 0xc7, 0x8c, 0xa4, 0xe8, 0x5d, 0x58, 0xce,
+	0x86, 0xc8, 0x9b, 0x84, 0x60, 0x29, 0xbb, 0x7d, 0xb8, 0x8f, 0x36, 0x60, 0x76, 0xc4, 0x48, 0x2a,
+	0x00, 0xda, 0x3d, 0xb1, 0x3c, 0xdc, 0x47, 0x2d, 0x98, 0xa3, 0xcc, 0xc3, 0x41, 0x48, 0x23, 0xe9,
+	0xe0, 0x9c, 0x3b, 0x4b, 0x59, 0x4f, 0x2c, 0xd1, 0x3b, 0xb0, 0x4c, 0xd9, 0x78, 0xc6, 0x28, 0x44,
+	0x43, 0x22, 0x6e, 0x51, 0xa6, 0x46, 0x8c, 0xc2, 0x75, 0x60, 0x85, 0xb2, 0xc9, 0xdc, 0x52, 0x40,
+	0x53, 0x02, 0x97, 0x28, 0xd3, 0xcd, 0xaf, 0x90, 0x6b, 0xd0, 0x20, 0x21, 0xa6, 0x43, 0x39, 0x20,
+	0xe6, 0x5d, 0xb5, 0xb0, 0xff, 0xa8, 0x41, 0x33, 0xef, 0xd9, 0x64, 0x4c, 0x65, 0x84, 0x1b, 0x53,
+	0xc2, 0x27, 0xb6, 0x6a, 0x19, 0x5b, 0x57, 0x74, 0xc7, 0xbc, 0xac, 0x3b, 0xb3, 0xa5, 0xee, 0x4c,
+	0x37, 0xf7, 0xcc, 0xf5, 0x9b, 0xbb, 0x71, 0x95, 0xe6, 0xfe, 0x11, 0xac, 0x5e, 0x10, 0xe4, 0x03,
+	0x36, 0x2e, 0xee, 0x87, 0xb0, 0x3a, 0x55, 0x11, 0x22, 0x5a, 0xba, 0xc1, 0xde, 0x2c, 0x14, 0x99,
+	0xfc, 0x70, 0x25, 0xce, 0xed, 0xd8, 0x3e, 0xb4, 0x8b, 0xcd, 0x7b, 0xd3, 0x24, 0x18, 0xda, 0xc5,
+	0x6e, 0xce, 0x92, 0xbc, 0x72, 0x6d, 0xdb, 0x23, 0xd8, 0xca, 0xb7, 0xa8, 0x20, 0x60, 0x57, 0x66,
+	0x98, 0x4c, 0x0c, 0x61, 0xbf, 0x51, 0x9c, 0x18, 0x75, 0xb9, 0xad, 0x57, 0xf6, 0x53, 0x68, 0x57,
+	0xd0, 0x5e, 0x76, 0x3c, 0xdc, 0xcb, 0x8d, 0x87, 0x76, 0x69, 0x50, 0x0b, 0x23, 0xe2, 0x07, 0xb0,
+	0x72, 0xd7, 0xd7, 0xcd, 0xc6, 0xf3, 0x85, 0x01, 0x9b, 0xa5, 0x04, 0xda, 0xaf, 0x1b, 0x28, 0x8b,
+	0xd7, 0x73, 0x61, 0xee, 0xfd, 0x3b, 0x0f, 0x6f, 0x64, 0xc5, 0x7d, 0x4d, 0x52, 0x31, 0x10, 0x90,
+	0x07, 0x33, 0x22, 0xca, 0x68, 0x4b, 0xca, 0xaf, 0xb8, 0x50, 0xac, 0x76, 0xc5, 0xa9, 0x0a, 0x8b,
+	0x6d, 0xfd, 0xf2, 0xf7, 0x3f, 0xbf, 0xd7, 0xd6, 0x10, 0x2a, 0x3c, 0x6f, 0x19, 0xc2, 0x50, 0x3f,
+	0x20, 0x1c, 0x6d, 0x4a, 0x0b, 0xe5, 0xcf, 0x14, 0x6b, 0xab, 0xfc, 0x50, 0x5b, 0xdf, 0x96, 0xd6,
+	0x5b, 0x68, 0xa3, 0x68, 0xdd, 0x79, 0x46, 0x83, 0x73, 0x34, 0x00, 0x53, 0x5d, 0xdc, 0xe8, 0x2d,
+	0x69, 0xa8, 0xf2, 0x65, 0x60, 0x6d, 0x57, 0x9e, 0x6b, 0xae, 0xb6, 0xe4, 0xda, 0xb0, 0x4b, 0x3c,
+	0xf9, 0xd4, 0xd8, 0x45, 0x4f, 0xc0, 0x54, 0x73, 0x43, 0x33, 0x55, 0xbe, 0x00, 0xac, 0xf5, 0x42,
+	0x5a, 0x3e, 0x13, 0xaf, 0x71, 0xdb, 0x91, 0x04, 0xef, 0x59, 0x6f, 0x97, 0x39, 0x33, 0xf5, 0xc7,
+	0x80, 0x06, 0xe7, 0x82, 0x12, 0x83, 0xa9, 0xa6, 0x88, 0xa6, 0xac, 0x7c, 0x20, 0x54, 0x52, 0xea,
+	0xf8, 0xed, 0x56, 0xc6, 0xef, 0xb9, 0x01, 0xf3, 0x22, 0xb7, 0xb2, 0x87, 0xd1, 0xed, 0xd2, 0x5c,
+	0x67, 0xc7, 0x8a, 0x65, 0xbf, 0x0c, 0xa2, 0x23, 0xb9, 0x27, 0x59, 0xef, 0xa0, 0xdd, 0x8b, 0x1c,
+	0xf5, 0x68, 0x70, 0xee, 0x8c, 0x24, 0xf5, 0xaf, 0x06, 0xcc, 0x1e, 0x10, 0xa9, 0x03, 0x6d, 0x97,
+	0xd5, 0x44, 0xa6, 0xdb, 0xad, 0x9d, 0x6a, 0x80, 0x96, 0xf0, 0x40, 0x4a, 0xf8, 0x18, 0x7d, 0x74,
+	0x79, 0x09, 0xce, 0x33, 0x3d, 0x18, 0xce, 0xd1, 0x6f, 0x06, 0xcc, 0xf6, 0x82, 0x20, 0x23, 0xa6,
+	0xfa, 0x52, 0xaa, 0x8c, 0xfd, 0x81, 0x94, 0xd0, 0xb3, 0x1f, 0x5c, 0x28, 0x41, 0xf0, 0x76, 0xcb,
+	0x45, 0x89, 0x32, 0xf8, 0xd3, 0x00, 0x50, 0xd5, 0x26, 0x05, 0xd9, 0x15, 0xe5, 0x77, 0x19, 0x4d,
+	0xbe, 0xd4, 0xf4, 0xbd, 0xf5, 0xed, 0xab, 0x68, 0x2a, 0x43, 0x8e, 0x43, 0x27, 0xf4, 0x3e, 0x37,
+	0x00, 0x54, 0xa9, 0x66, 0xf4, 0xbe, 0xf4, 0x3a, 0xac, 0xd4, 0xab, 0xd3, 0xb8, 0x7b, 0xad, 0x34,
+	0x3e, 0xbc, 0xff, 0xdd, 0x27, 0x7d, 0xca, 0x07, 0xa3, 0xa3, 0xae, 0x1f, 0x87, 0xce, 0x51, 0x1a,
+	0xfb, 0x18, 0xa7, 0x8e, 0x3f, 0xa0, 0x69, 0xc2, 0x38, 0xf6, 0x7f, 0xfa, 0x40, 0x18, 0xed, 0xc7,
+	0xce, 0xc9, 0x5d, 0x27, 0xf7, 0x3f, 0xfd, 0xc8, 0x94, 0x42, 0xee, 0xfe, 0x1f, 0x00, 0x00, 0xff,
+	0xff, 0xc5, 0x05, 0x18, 0xda, 0xc1, 0x0f, 0x00, 0x00,
 }
 
 // Reference imports to suppress errors if they are not otherwise used.
